add instructors
