# backend/routes/index.js
@@ -2,5 +2,6 @@ const router = require('express').Router();
 
 router.use('/', require('./swagger'));
 router.use('/students', require('./students'));
+router.use('/instructors', require('./instructors'));
 
 module.exports = router;
